2008-12-15 TADA Tadashi <sho@spc.gr.jp>
	* amazon.rb: added "Artist" to author elements.

2008-11-12 TADA Tadashi <sho@spc.gr.jp>
	* tb-show.rb: added comment mode into no overriding TDiary::Comment class.

2008-11-07 TADA Tadashi <sho@spc.gr.jp>
	* makerss.rb: fixed bad numeric entiries value (again).

2008-10-26 SHIBATA Hiroshi <shibata.hiroshi@gmail.com>
	* recent_comment3.rb, */recent_comment3.rb: applied patch #128. thx tamo.

2008-10-26 SHIBATA Hiroshi <shibata.hiroshi@gmail.com>
	* recent_comment.rb, */recent_comment.rb: fix #128. thx tamo.

2008-10-24 TADA Tadashi <sho@spc.gr.jp>
	* amazon.rb: added "Creator" to author elements.

2008-10-19 TADA Tadashi <sho@spc.gr.jp>
	* release 2.3.1.

2008-10-18 TADA Tadashi <sho@spc.gr.jp>
	* navi_user.rb: added request_method to NaviUserCGI class.

2008-10-17 TADA Tadashi <sho@spc.gr.jp>
	* highlight.rb: compared tag name case insensitive.

2008-09-10 KURODA Hiraku <hiraku at sapporo.email.ne.jp>
	* highlight.rb: enable to work on XHTML mode.

2008-08-26 TADA Tadashi <sho@spc.gr.jp>
	* recent_rss.rb: added a parameter 'show_modified'.

2008-08-20 TADA Tadashi <sho@spc.gr.jp>
	* squeeze.rb: fixed #120, memory leak by nested loading. thanks KURODA Hiraku
	<hiraku at sapporo.email.ne.jp>.
	* squeeze.rb: fixed #122, unsecure operation using with -p option.
	thanks KURODA Hiraku <hiraku at sapporo.email.ne.jp>.
	* squeeze.rb: added --overwrite option.

2008-08-04 TADA Tadashi <sho@spc.gr.jp>
	* category.rb: fixed #82, incompatible of white space of category.

2008-08-03 TADA Tadashi <sho@spc.gr.jp>
	* titile_tag.rb: fixed a bug about no site name in the title.
	* highlight.rb: changed title format to as same as default.

2008-08-01 TADA Tadashi <sho@spc.gr.jp>
	* squeeze.rb: inserted user_navi plugin into the footer.
	* navi_user.rb: added user_agent method into dummy CGI class.

2008-07-21 TADA Tadashi <sho@spc.gr.jp>
	* makerss.rb: fixed error when subtitle was nil.

2008-07-21 SHIBATA Hiroshi <shibata.hiroshi@gmail.com>