@@ -1,3 +1,6 @@
+2008-12-26 TADA Tadashi <sho@spc.gr.jp>
+	* calendar2.rb, calendar3.rb: fixed bug on search mode. Thanks NT.
+
 2008-12-15 TADA Tadashi <sho@spc.gr.jp>
 	* amazon.rb: added "Artist" to author elements.
 
